--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,129 @@
 ---
+import "../styles/global.css";
+import "plyr/dist/plyr.css";
 
+import { Play } from "lucide-astro";
+
+const videos = [
+  {
+    cam: "1",
+    date: "2024-12-30",
+    time: "6:32 p.m.",
+    url: "https://www.learningcontainer.com/wp-content/uploads/2020/05/sample-mp4-file.mp4",
+    cover: "https://placehold.co/320x240?text=video+1",
+  },
+  {
+    cam: "3",
+    date: "2025-03-01",
+    time: "11:32 p.m.",
+    url: "https://www.learningcontainer.com/wp-content/uploads/2020/05/sample-mp4-file.mp4",
+    cover: "https://placehold.co/320x240?text=video+2",
+  },
+  {
+    cam: "2",
+    date: "2025-02-11",
+    time: "8:15 a.m.",
+    url: "https://www.learningcontainer.com/wp-content/uploads/2020/05/sample-mp4-file.mp4",
+    cover: "https://placehold.co/320x240?text=video+3",
+  },
+];
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Secure Cams</title>
+  </head>
+  <body>
+    <main class="max-w-[40rem] mx-auto px-4 lg:px-0">
+      <article class="py-4 sticky top-0 z-1">
+        <video controls playsinline class="aspect-video">
+          <source
+            src="https://freetestdata.com/wp-content/uploads/2022/02/Free_Test_Data_1MB_MP4.mp4"
+            type="video/mp4"
+          />
+        </video>
+      </article>
+
+      <ul class="list bg-base-100 rounded-box shadow-md mb-8" data-vlist>
+        <li class="p-4 pb-2 text-xs opacity-60 tracking-wide">Recent videos</li>
+        {
+          videos.map((video) => (
+            <li class="list-row">
+              <div>
+                <img
+                  class="w-30 h-auto rounded-box"
+                  src={video.cover}
+                  loading="lazy"
+                  alt="Video preview"
+                />
+              </div>
+              <div>
+                <p>CAM: {video.cam}</p>
+                <p>
+                  <time class="text-xs" datetime={video.date}>
+                    {video.date}
+                  </time>
+                </p>
+                <p>
+                  <time class="text-xs" datetime={video.date}>
+                    {video.time}
+                  </time>
+                </p>
+              </div>
+              <button
+                class="btn btn-info btn-soft"
+                aria-label="Reproducir video"
+                data-video={video.url}>
+                <Play />
+              </button>
+            </li>
+          ))
+        }
+      </ul>
+    </main>
+  </body>
 </html>
+
+<script>
+  import Plyr from "plyr";
+
+  document.addEventListener("DOMContentLoaded", () => {
+    const player = new Plyr("video", {
+      controls: [
+        "play",
+        "progress",
+        "current-time",
+        "settings",
+        "pip",
+        "fullscreen",
+      ],
+      ratio: "16:9",
+    });
+
+    const VIDEO_LIST = document.querySelector("[data-vlist]");
+
+    VIDEO_LIST?.addEventListener("click", ({ target }) => {
+      const button = target.closest("[data-video]");
+
+      if (!button) {
+        return;
+      }
+
+      player.source = {
+        type: "video",
+        title: "Security video",
+        sources: [
+          {
+            src: button.dataset.video,
+          },
+        ],
+      };
+
+      player.play();
+    });
+  });
+</script>
