💡 (src/pages/index.astro): Cambiar la clase del botón de reproducción y descarga de videos para que sea un botón cuadrado.   ♻️ (src/styles/global.css): Cambiar el tema predeterminado de DaisyUI desde "cupcake" a "light".

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -82,13 +82,13 @@ const videos = [
               </div>
               <div class="flex flex-col gap-2 items-end">
                 <button
-                  class="btn btn-sm btn-info btn-soft hover:text-white"
+                  class="btn btn-sm btn-square btn-info btn-soft hover:text-white"
                   aria-label="Reproducir video"
                   data-video={video.url}>
                   <Play />
                 </button>
                 <a
-                  class="btn btn-sm btn-info btn-soft hover:text-white"
+                  class="btn btn-sm btn-square btn-info btn-soft hover:text-white"
                   aria-label="Descargar video"
                   download={`${video.date}.webm`}
                   target="_blank"
