--- a/src/components/CamVideoList.astro
+++ b/src/components/CamVideoList.astro
@@ -22,45 +22,48 @@ import Poster from "@images/vp.webp";
       <div><a href="/security/view/">View cam</a></div>
     </li>
 
-    <li class="list-row">
-      <div>
-        <img
-          class="w-30 h-auto rounded-box skeleton aspect-video object-cover"
-          loading="lazy"
-          alt="Video preview"
-          x-data
-          @load="$el.classList.remove('skeleton')"
-          @error="$el.classList.remove('skeleton')"
-        />
-      </div>
-      <div>
-        <p><span class="font-semibold">CAM: 01</span></p>
-        <p>
-          <time class="text-xs" datetime="">2025-03-09</time>
-        </p>
-        <p>
-          <time class="text-xs" datetime="">13:45:01</time>
-        </p>
-      </div>
-      <div class="flex gap-2 items-end">
-        <a
-          class="btn btn-sm btn-square btn-info btn-soft hover:text-white"
-          aria-label="Descargar video"
-          download
-          target="_blank"
-          href=""
-          data-download>
-          <!-- <Download /> -->
-        </a>
-        <button
-          class="btn btn-sm btn-square btn-info btn-soft hover:text-white"
-          aria-label="Reproducir video"
-          data-video=""
-          data-play>
-          <!-- <Play /> -->
-        </button>
-      </div>
-    </li>
+    <template x-for="{video, cover} in list">
+      <li class="list-row">
+        <div>
+          <img
+            class="w-30 h-auto rounded-box skeleton aspect-video object-cover"
+            loading="lazy"
+            :src="`${basePath}${cover}`"
+            alt="Video preview"
+            x-data
+            @load="$el.classList.remove('skeleton')"
+            @error="$el.classList.remove('skeleton')"
+          />
+        </div>
+        <div>
+          <p><span class="font-semibold">CAM: 01</span></p>
+          <p>
+            <time class="text-xs" datetime="">2025-03-09</time>
+          </p>
+          <p>
+            <time class="text-xs" datetime="">13:45:01</time>
+          </p>
+        </div>
+        <div class="flex gap-2 items-end">
+          <a
+            class="btn btn-sm btn-square btn-info btn-soft hover:text-white"
+            aria-label="Descargar video"
+            download
+            target="_blank"
+            href=""
+            data-download>
+            <!-- <Download /> -->
+          </a>
+          <button
+            class="btn btn-sm btn-square btn-info btn-soft hover:text-white"
+            aria-label="Reproducir video"
+            data-video=""
+            data-play>
+            <!-- <Play /> -->
+          </button>
+        </div>
+      </li>
+    </template>
   </ul>
 </div>
 
@@ -95,12 +98,13 @@ import Poster from "@images/vp.webp";
 
   Alpine.data("videoList", () => ({
     isLoading: true,
+    basePath: import.meta.env.PUBLIC_BASE_PATH,
     list: [],
     init() {
       fetch(import.meta.env.PUBLIC_VIDEO_LIST_API)
         .then((res) => res.json())
         .then((data) => {
-          console.log(data);
+          this.list = data.files;
         })
         .finally(() => {
           this.isLoading = false;
