feat(CamVideoList.astro): agregar estilo de enfoque a las listas de videos

--- a/src/components/CamVideoList.astro
+++ b/src/components/CamVideoList.astro
@@ -23,7 +23,7 @@ import Poster from "@images/vp.webp";
     </li>
 
     <template x-for="{video, cover} in list">
-      <li class="list-row">
+      <li class="list-row focus-within:ring-2 focus-within:ring-info">
         <div>
           <img
             class="w-30 h-auto rounded-box skeleton aspect-video object-cover"
