fix(CamVideoList.astro): actualizar clase de div para agregar grow-1 feat(CamVideoList.astro): cambiar ícono de carga para incluir color text-info

--- a/src/components/CamVideoList.astro
+++ b/src/components/CamVideoList.astro
@@ -11,9 +11,9 @@ import Poster from "@images/vp.webp";
     </video>
   </article>
 
-  <div class="portrait:my-5">
+  <div class="portrait:my-5 grow-1">
     <div class="flex justify-center py-4" x-show="isLoading">
-      <span class="loading loading-dots loading-xl mx-auto"></span>
+      <span class="loading loading-dots loading-xl text-info mx-auto"></span>
     </div>
 
     <ul class="list mb-8 bg-base-100" x-show="!isLoading" x-cloak>
