--- a/src/components/CamVideoList.astro
+++ b/src/components/CamVideoList.astro
@@ -23,7 +23,7 @@ import Poster from "@images/vp.webp";
         <button class="opacity-60 cursor-pointer" @click="loadVideos"
           >Reload list</button
         >
-        <a class="opacity-60" href="/security/view/">View cam</a>
+        <a class="opacity-60" href="/security/view/">View live</a>
       </li>
 
       <template x-for="{video, cover} in list">
