--- a/src/pages/view.astro
+++ b/src/pages/view.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+import { ArrowLeft } from "lucide-astro";
 ---
 
 <html lang="en">
@@ -22,7 +23,12 @@ import "../styles/global.css";
           @error="$el.classList.remove('skeleton'); $el.alt = 'Cámara no disponible'"
         />
       </article>
-      <a class="link" href="../">Regresar al listado</a>
+      <div class="flex justify-end">
+        <a class="btn btn-info btn-soft" href="../">
+          <ArrowLeft size="16" />
+          Regresar</a
+        >
+      </div>
     </main>
   </body>
 </html>
